macros/entity_macros/tests/ui/attribute/simple_ent/conflicting-field-named-database.stderr
error[E0124]: field `database` is already declared
 --> $DIR/conflicting-field-named-database.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^ field already declared
...
7 |     database: usize,
  |     --------------- `database` first declared here
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0124]: field `database` is already declared
 --> $DIR/conflicting-field-named-database.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | field already declared
  | `database` first declared here
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0201]: duplicate definitions with name `database`:
 --> $DIR/conflicting-field-named-database.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | previous definition of `database` here
  | duplicate definition
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
